--- a/pagesfolder/results.html
+++ b/pagesfolder/results.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link rel="stylesheet" href="cssfolder/style.css" />
+    <link rel="stylesheet" href="/cssfolder/style2.css" />
     <link
       href="https://fonts.googleapis.com/css?family=Bevan|Catamaran:800|Luckiest+Guy|Raleway:900&display=swap"
       rel="stylesheet"
@@ -10,6 +10,7 @@
   </head>
   <body>
     <header>WIC Finder</header>
+
     <div class="navigation">
       <nav>
         <ul>
@@ -19,19 +20,20 @@
         </ul>
       </nav>
     </div>
-    <div class="inputsection">
+    <h1>RESULTS</h1>
+    <!-- <div class="inputsection">
       <form action="pagesfolder/results.html">
         <input type="text" name="Name" placeholder="Name" />
         <input type="text" name="city" placeholder="City" />
         <input type="text" name="zipcode" placeholder="Zip Code" />
         <input type="submit" value="submit" />
       </form>
-    </div>
+    </div> -->
     <script
       src="https://code.jquery.com/jquery-3.4.1.min.js"
       integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
       crossorigin="anonymous"
     ></script>
-    <script src="/jsfolder/app.js"></script>
+    <script src="jsfolder/app.js"></script>
   </body>
 </html>
