--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
   </head>
   <body>
     <header>WIC Finder</header>
-    <div class="navigation">
+    <div class="navigation" id="nav">
       <nav>
         <ul>
-          <li>Home</li>
-          <li>About</li>
-          <li>Info</li>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="/pagesfolder/about.html">About</a></li>
+          <li><a href="/pagesfolder/info.html">Info</a></li>
         </ul>
       </nav>
     </div>
@@ -27,6 +27,7 @@
         <input type="submit" value="submit" />
       </form>
     </div>
+
     <script
       src="https://code.jquery.com/jquery-3.4.1.min.js"
       integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
