--- a/pagesfolder/results.html
+++ b/pagesfolder/results.html
@@ -11,12 +11,12 @@
   <body>
     <header>WIC Finder</header>
 
-    <div class="navigation">
+    <div class="navigation" id="nav">
       <nav>
         <ul>
-          <li>Home</li>
-          <li>About</li>
-          <li>Info</li>
+          <li><a href="/index.html">Home</a></li>
+          <li><a href="/pagesfolder/about.html">About</a></li>
+          <li><a href="/pagesfolder/info.html">Info</a></li>
         </ul>
       </nav>
     </div>
@@ -34,6 +34,6 @@
       integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
       crossorigin="anonymous"
     ></script>
-    <script src="jsfolder/app.js"></script>
+    <script src="/jsfolder/app.js"></script>
   </body>
 </html>
