--- a/pagesfolder/about.html
+++ b/pagesfolder/about.html
@@ -3,7 +3,7 @@
   <head>
     <link rel="stylesheet" href="/cssfolder/about.css" />
     <link
-      href="https://fonts.googleapis.com/css?family=Bevan|Catamaran:800|Luckiest+Guy|Raleway:900&display=swap"
+      href="https://fonts.googleapis.com/css?family=Bevan|Kanit:200|Catamaran:800|Luckiest+Guy|Raleway:900&display=swap"
       rel="stylesheet"
     />
     <title>Project One</title>
