--- a/pagesfolder/results.html
+++ b/pagesfolder/results.html
@@ -21,6 +21,10 @@
       </nav>
     </div>
     <h1>RESULTS</h1>
+
+    <div class="results">
+      <!-- //reulst shoud go here -->
+    </div>
     <!-- <div class="inputsection">
       <form action="pagesfolder/results.html">
         <input type="text" name="Name" placeholder="Name" />
