--- a/pagesfolder/info.html
+++ b/pagesfolder/info.html
@@ -3,7 +3,7 @@
   <head>
     <link rel="stylesheet" href="/cssfolder/info.css" />
     <link
-      href="https://fonts.googleapis.com/css?family=Bevan|Catamaran:800|Luckiest+Guy|Raleway:900&display=swap"
+      href="https://fonts.googleapis.com/css?family=Bevan|Kanit:200|Catamaran:800|Luckiest+Guy|Raleway:900&display=swap"
       rel="stylesheet"
     />
     <title>Project One</title>
@@ -21,82 +21,54 @@
       </nav>
     </div>
     <h1>Info</h1>
+    <h2>The Connecicut WIC Program</h2>
     <article>
-      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consequuntur
-      iure debitis quas iste assumenda nobis dolor quisquam veniam! Quas nisi
-      consequuntur repellendus. Earum in harum officiis voluptates alias. Autem,
-      laborum?Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis vero
-      quasi amet enim vel culpa dicta quod consequatur consequuntur explicabo
-      atque odit, hic tempore obcaecati? Cupiditate enim obcaecati mollitia
-      explicabo?Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ea
-      veritatis sit eaque ullam fugiat voluptas, labore unde culpa ut harum sed
-      eos ex dicta consequuntur temporibus, illo quae iure officiis?Lorem, ipsum
-      dolor sit amet consectetur adipisicing elit. Animi quam repudiandae iure
-      maiores aut. Sint veritatis ex nisi. Quos facere perspiciatis voluptates
-      accusamus maxime, nesciunt quasi atque provident cum sequi?Lorem ipsum
-      dolor sit amet consectetur, adipisicing elit. Cum cupiditate delectus
-      harum provident, earum beatae. Soluta, quo. Accusamus consectetur, error
-      deleniti quisquam vel obcaecati nobis commodi, molestias doloremque,
-      adipisci voluptatibus.lorem Lorem, ipsum dolor sit amet consectetur
-      adipisicing elit. Sit, id maxime voluptate odit, aperiam provident
-      voluptatum debitis explicabo nesciunt, dolor obcaecati cum et minima rerum
-      voluptates modi quasi qui vero! Lorem ipsum dolor sit amet consectetur
-      adipisicing elit. Dolores expedita eveniet voluptas ipsa unde dicta ab
-      fugiat perspiciatis iure suscipit nobis, earum, enim et perferendis
-      quisquam aliquid dolorum inventore! Impedit. Lorem ipsum dolor sit amet
-      consectetur adipisicing elit. Mollitia vero temporibus, dolor quam aut,
-      itaque nemo exercitationem dolore sint quisquam iste veniam enim rem
-      voluptatum reprehenderit eligendi, aliquam aspernatur repellat. Lorem,
-      ipsum dolor sit amet consectetur adipisicing elit. Consequuntur iure
-      debitis quas iste assumenda nobis dolor quisquam veniam! Quas nisi
-      consequuntur repellendus. Earum in harum officiis voluptates alias. Autem,
-      laborum?Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis vero
-      quasi amet enim vel culpa dicta quod consequatur consequuntur explicabo
-      atque odit, hic tempore obcaecati? Cupiditate enim obcaecati mollitia
-      explicabo?Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ea
-      veritatis sit eaque ullam fugiat voluptas, labore unde culpa ut harum sed
-      eos ex dicta consequuntur temporibus, illo quae iure officiis?Lorem, ipsum
-      dolor sit amet consectetur adipisicing elit. Animi quam repudiandae iure
-      maiores aut. Sint veritatis ex nisi. Quos facere perspiciatis voluptates
-      accusamus maxime, nesciunt quasi atque provident cum sequi?Lorem ipsum
-      dolor sit amet consectetur, adipisicing elit. Cum cupiditate delectus
-      harum provident, earum beatae. Soluta, quo. Accusamus consectetur, error
-      deleniti quisquam vel obcaecati nobis commodi, molestias doloremque,
-      adipisci voluptatibus.lorem Lorem, ipsum dolor sit amet consectetur
-      adipisicing elit. Sit, id maxime voluptate odit, aperiam provident
-      voluptatum debitis explicabo nesciunt, dolor obcaecati cum et minima rerum
-      voluptates modi quasi qui vero! Lorem ipsum dolor sit amet consectetur
-      adipisicing elit. Dolores expedita eveniet voluptas ipsa unde dicta ab
-      fugiat perspiciatis iure suscipit nobis, earum, enim et perferendis
-      quisquam aliquid dolorum inventore! Impedit. Lorem ipsum dolor sit amet
-      consectetur adipisicing elit. Mollitia vero temporibus, dolor quam aut,
-      itaque nemo exercitationem dolore sint quisquam iste veniam enim rem
-      voluptatum reprehenderit eligendi, aliquam aspernatur repellat. Lorem,
-      ipsum dolor sit amet consectetur adipisicing elit. Consequuntur iure
-      debitis quas iste assumenda nobis dolor quisquam veniam! Quas nisi
-      consequuntur repellendus. Earum in harum officiis voluptates alias. Autem,
-      laborum?Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis vero
-      quasi amet enim vel culpa dicta quod consequatur consequuntur explicabo
-      atque odit, hic tempore obcaecati? Cupiditate enim obcaecati mollitia
-      explicabo?Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ea
-      veritatis sit eaque ullam fugiat voluptas, labore unde culpa ut harum sed
-      eos ex dicta consequuntur temporibus, illo quae iure officiis?Lorem, ipsum
-      dolor sit amet consectetur adipisicing elit. Animi quam repudiandae iure
-      maiores aut. Sint veritatis ex nisi. Quos facere perspiciatis voluptates
-      accusamus maxime, nesciunt quasi atque provident cum sequi?Lorem ipsum
-      dolor sit amet consectetur, adipisicing elit. Cum cupiditate delectus
-      harum provident, earum beatae. Soluta, quo. Accusamus consectetur, error
-      deleniti quisquam vel obcaecati nobis commodi, molestias doloremque,
-      adipisci voluptatibus.lorem Lorem, ipsum dolor sit amet consectetur
-      adipisicing elit. Sit, id maxime voluptate odit, aperiam provident
-      voluptatum debitis explicabo nesciunt, dolor obcaecati cum et minima rerum
-      voluptates modi quasi qui vero! Lorem ipsum dolor sit amet consectetur
-      adipisicing elit. Dolores expedita eveniet voluptas ipsa unde dicta ab
-      fugiat perspiciatis iure suscipit nobis, earum, enim et perferendis
-      quisquam aliquid dolorum inventore! Impedit. Lorem ipsum dolor sit amet
-      consectetur adipisicing elit. Mollitia vero temporibus, dolor quam aut,
-      itaque nemo exercitationem dolore sint quisquam iste veniam enim rem
-      voluptatum reprehenderit eligendi, aliquam aspernatur repellat.
+      The Special Supplemental Nutrition Program for Women, Infants and
+      Children, better known as the WIC Program, provides supplemental foods,
+      health care referrals, nutrition education, and breastfeeding promotion
+      and support to low-income pregnant, breastfeeding, and non-breastfeeding
+      postpartum women, and to infants and children up to age five who are found
+      to be at nutritional risk.
+    </article>
+    <h2>Who is eligible?</h2>
+    <article>
+      Pregnant women (through pregnancy and up to 6 weeks after birth or after
+      pregnancy ends).<br /><br />
+      Breastfeeding women (up to infant’s 1 st birthday).<br /><br />
+      Non-breastfeeding postpartum women (up to 6 months after the birth of an
+      infant or after pregnancy ends).<br /><br />
+      Infants (up to 1st birthday). WIC serves 45 percent of all infants born in
+      the United States<br /><br />
+      Children up to their 5th birthday (fathers, grandparents, foster parents
+      or other guardians may apply for WIC for their children).
+    </article>
+
+    <h3>USDA Non-Discrimination Statement</h3>
+    <article>
+      In accordance with Federal civil rights law and U.S. Department of
+      Agriculture (USDA) civil rights regulations and policies, the USDA, its
+      Agencies, offices, and employees, and institutions participating in or
+      administering USDA programs are prohibited from discriminating based on
+      race, color, national origin, sex, disability, age, or reprisal or
+      retaliation for prior civil rights activity in any program or activity
+      conducted or funded by USDA. Persons with disabilities who require
+      alternative means of communication for program information (e.g. Braille,
+      large print, audiotape, American Sign Language, etc.), should contact the
+      Agency (State or local) where they applied for benefits. Individuals who
+      are deaf, hard of hearing or have speech disabilities may contact USDA
+      through the Federal Relay Service at (800) 877-8339. Additionally, program
+      information may be made available in languages other than English. To file
+      a program complaint of discrimination, complete the USDA Program
+      Discrimination Complaint Form, (AD-3027) found online at:
+      http://www.ascr.usda.gov/complaint_filing_cust.html, and at any USDA
+      office, or write a letter addressed to USDA and provide in the letter all
+      of the information requested in the form. To request a copy of the
+      complaint form, call (866) 632-9992. Submit your completed form or letter
+      to USDA by: (1) mail: U.S. Department of Agriculture Office of the
+      Assistant Secretary for Civil Rights 1400 Independence Avenue, SW
+      Washington, D.C. 20250-9410; (2) fax: (202) 690-7442; or (3) email:
+      program.intake@usda.gov. This institution is an equal opportunity
+      provider.
     </article>
 
     <!-- <div class="inputsection">
