--- a/pagesfolder/about.html
+++ b/pagesfolder/about.html
@@ -10,6 +10,7 @@
   </head>
   <body>
     <header>WIC Finder</header>
+    <div class="cellphoneheader">W</div>
 
     <div class="navigation" id="nav">
       <nav>
@@ -21,83 +22,39 @@
       </nav>
     </div>
     <h1>About</h1>
-    <article>
-      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consequuntur
-      iure debitis quas iste assumenda nobis dolor quisquam veniam! Quas nisi
-      consequuntur repellendus. Earum in harum officiis voluptates alias. Autem,
-      laborum?Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis vero
-      quasi amet enim vel culpa dicta quod consequatur consequuntur explicabo
-      atque odit, hic tempore obcaecati? Cupiditate enim obcaecati mollitia
-      explicabo?Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ea
-      veritatis sit eaque ullam fugiat voluptas, labore unde culpa ut harum sed
-      eos ex dicta consequuntur temporibus, illo quae iure officiis?Lorem, ipsum
-      dolor sit amet consectetur adipisicing elit. Animi quam repudiandae iure
-      maiores aut. Sint veritatis ex nisi. Quos facere perspiciatis voluptates
-      accusamus maxime, nesciunt quasi atque provident cum sequi?Lorem ipsum
-      dolor sit amet consectetur, adipisicing elit. Cum cupiditate delectus
-      harum provident, earum beatae. Soluta, quo. Accusamus consectetur, error
-      deleniti quisquam vel obcaecati nobis commodi, molestias doloremque,
-      adipisci voluptatibus.lorem Lorem, ipsum dolor sit amet consectetur
-      adipisicing elit. Sit, id maxime voluptate odit, aperiam provident
-      voluptatum debitis explicabo nesciunt, dolor obcaecati cum et minima rerum
-      voluptates modi quasi qui vero! Lorem ipsum dolor sit amet consectetur
-      adipisicing elit. Dolores expedita eveniet voluptas ipsa unde dicta ab
-      fugiat perspiciatis iure suscipit nobis, earum, enim et perferendis
-      quisquam aliquid dolorum inventore! Impedit. Lorem ipsum dolor sit amet
-      consectetur adipisicing elit. Mollitia vero temporibus, dolor quam aut,
-      itaque nemo exercitationem dolore sint quisquam iste veniam enim rem
-      voluptatum reprehenderit eligendi, aliquam aspernatur repellat. Lorem,
-      ipsum dolor sit amet consectetur adipisicing elit. Consequuntur iure
-      debitis quas iste assumenda nobis dolor quisquam veniam! Quas nisi
-      consequuntur repellendus. Earum in harum officiis voluptates alias. Autem,
-      laborum?Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis vero
-      quasi amet enim vel culpa dicta quod consequatur consequuntur explicabo
-      atque odit, hic tempore obcaecati? Cupiditate enim obcaecati mollitia
-      explicabo?Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ea
-      veritatis sit eaque ullam fugiat voluptas, labore unde culpa ut harum sed
-      eos ex dicta consequuntur temporibus, illo quae iure officiis?Lorem, ipsum
-      dolor sit amet consectetur adipisicing elit. Animi quam repudiandae iure
-      maiores aut. Sint veritatis ex nisi. Quos facere perspiciatis voluptates
-      accusamus maxime, nesciunt quasi atque provident cum sequi?Lorem ipsum
-      dolor sit amet consectetur, adipisicing elit. Cum cupiditate delectus
-      harum provident, earum beatae. Soluta, quo. Accusamus consectetur, error
-      deleniti quisquam vel obcaecati nobis commodi, molestias doloremque,
-      adipisci voluptatibus.lorem Lorem, ipsum dolor sit amet consectetur
-      adipisicing elit. Sit, id maxime voluptate odit, aperiam provident
-      voluptatum debitis explicabo nesciunt, dolor obcaecati cum et minima rerum
-      voluptates modi quasi qui vero! Lorem ipsum dolor sit amet consectetur
-      adipisicing elit. Dolores expedita eveniet voluptas ipsa unde dicta ab
-      fugiat perspiciatis iure suscipit nobis, earum, enim et perferendis
-      quisquam aliquid dolorum inventore! Impedit. Lorem ipsum dolor sit amet
-      consectetur adipisicing elit. Mollitia vero temporibus, dolor quam aut,
-      itaque nemo exercitationem dolore sint quisquam iste veniam enim rem
-      voluptatum reprehenderit eligendi, aliquam aspernatur repellat. Lorem,
-      ipsum dolor sit amet consectetur adipisicing elit. Consequuntur iure
-      debitis quas iste assumenda nobis dolor quisquam veniam! Quas nisi
-      consequuntur repellendus. Earum in harum officiis voluptates alias. Autem,
-      laborum?Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis vero
-      quasi amet enim vel culpa dicta quod consequatur consequuntur explicabo
-      atque odit, hic tempore obcaecati? Cupiditate enim obcaecati mollitia
-      explicabo?Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ea
-      veritatis sit eaque ullam fugiat voluptas, labore unde culpa ut harum sed
-      eos ex dicta consequuntur temporibus, illo quae iure officiis?Lorem, ipsum
-      dolor sit amet consectetur adipisicing elit. Animi quam repudiandae iure
-      maiores aut. Sint veritatis ex nisi. Quos facere perspiciatis voluptates
-      accusamus maxime, nesciunt quasi atque provident cum sequi?Lorem ipsum
-      dolor sit amet consectetur, adipisicing elit. Cum cupiditate delectus
-      harum provident, earum beatae. Soluta, quo. Accusamus consectetur, error
-      deleniti quisquam vel obcaecati nobis commodi, molestias doloremque,
-      adipisci voluptatibus.lorem Lorem, ipsum dolor sit amet consectetur
-      adipisicing elit. Sit, id maxime voluptate odit, aperiam provident
-      voluptatum debitis explicabo nesciunt, dolor obcaecati cum et minima rerum
-      voluptates modi quasi qui vero! Lorem ipsum dolor sit amet consectetur
-      adipisicing elit. Dolores expedita eveniet voluptas ipsa unde dicta ab
-      fugiat perspiciatis iure suscipit nobis, earum, enim et perferendis
-      quisquam aliquid dolorum inventore! Impedit. Lorem ipsum dolor sit amet
-      consectetur adipisicing elit. Mollitia vero temporibus, dolor quam aut,
-      itaque nemo exercitationem dolore sint quisquam iste veniam enim rem
-      voluptatum reprehenderit eligendi, aliquam aspernatur repellat.
-    </article>
+    <div class="information">
+      <h2>About this site</h2>
+      <article>
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dicta magnam
+        ad cumque temporibus reiciendis numquam esse eveniet animi. Illo et
+        atque quasi assumenda provident adipisci nostrum repudiandae cupiditate
+        debitis sapiente. Lorem ipsum dolor sit amet consectetur adipisicing
+        elit. Consequuntur voluptas sed doloremque labore perspiciatis
+        necessitatibus iste obcaecati fugiat unde, eum repudiandae, similique
+        quam, incidunt perferendis minus ipsum blanditiis laboriosam facere.
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Doloremque,
+        dolores magni tenetur reprehenderit nemo voluptatum molestiae quia
+        eligendi a aliquid. Soluta quis temporibus quia officiis. Pariatur
+        perspiciatis molestias ea ullam?
+      </article>
+      <h2>API being used</h2>
+      <article>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod libero
+        molestias architecto nihil optio, dolorum unde veritatis mollitia ipsum
+        consequuntur illo accusamus sed nesciunt assumenda reiciendis, vero
+        cupiditate facere impedit! Lorem ipsum, dolor sit amet consectetur
+        adipisicing elit. Aliquam accusantium illo quae totam, dolorum vitae,
+        omnis delectus ab quod quas labore et placeat quis. Quam magni doloribus
+        exercitationem dolores in.
+      </article>
+
+      <h3>How to contribute</h3>
+      <article>
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nisi magnam
+        eum amet natus, laboriosam est a ea necessitatibus aliquam tempore,
+        omnis magni eveniet, reiciendis sint tempora impedit cum beatae sequi?
+      </article>
+    </div>
     <!-- <div class="inputsection">
       <form action="pagesfolder/results.html">
         <input type="text" name="Name" placeholder="Name" />
