--- a/pagesfolder/info.html
+++ b/pagesfolder/info.html
@@ -10,6 +10,7 @@
   </head>
   <body>
     <header>WIC Finder</header>
+    <div class="cellphoneheader">W</div>
 
     <div class="navigation" id="nav">
       <nav>
@@ -21,56 +22,57 @@
       </nav>
     </div>
     <h1>Info</h1>
-    <h2>The Connecicut WIC Program</h2>
-    <article>
-      The Special Supplemental Nutrition Program for Women, Infants and
-      Children, better known as the WIC Program, provides supplemental foods,
-      health care referrals, nutrition education, and breastfeeding promotion
-      and support to low-income pregnant, breastfeeding, and non-breastfeeding
-      postpartum women, and to infants and children up to age five who are found
-      to be at nutritional risk.
-    </article>
-    <h2>Who is eligible?</h2>
-    <article>
-      Pregnant women (through pregnancy and up to 6 weeks after birth or after
-      pregnancy ends).<br /><br />
-      Breastfeeding women (up to infant’s 1 st birthday).<br /><br />
-      Non-breastfeeding postpartum women (up to 6 months after the birth of an
-      infant or after pregnancy ends).<br /><br />
-      Infants (up to 1st birthday). WIC serves 45 percent of all infants born in
-      the United States<br /><br />
-      Children up to their 5th birthday (fathers, grandparents, foster parents
-      or other guardians may apply for WIC for their children).
-    </article>
+    <div class="information">
+      <h2>The Connecicut WIC Program</h2>
+      <article>
+        The Special Supplemental Nutrition Program for Women, Infants and
+        Children, better known as the WIC Program, provides supplemental foods,
+        health care referrals, nutrition education, and breastfeeding promotion
+        and support to low-income pregnant, breastfeeding, and non-breastfeeding
+        postpartum women, and to infants and children up to age five who are
+        found to be at nutritional risk.
+      </article>
+      <h2>Who is eligible?</h2>
+      <article>
+        Pregnant women (through pregnancy and up to 6 weeks after birth or after
+        pregnancy ends).<br /><br />
+        Breastfeeding women (up to infant’s 1 st birthday).<br /><br />
+        Non-breastfeeding postpartum women (up to 6 months after the birth of an
+        infant or after pregnancy ends).<br /><br />
+        Infants (up to 1st birthday). WIC serves 45 percent of all infants born
+        in the United States<br /><br />
+        Children up to their 5th birthday (fathers, grandparents, foster parents
+        or other guardians may apply for WIC for their children).
+      </article>
 
-    <h3>USDA Non-Discrimination Statement</h3>
-    <article>
-      In accordance with Federal civil rights law and U.S. Department of
-      Agriculture (USDA) civil rights regulations and policies, the USDA, its
-      Agencies, offices, and employees, and institutions participating in or
-      administering USDA programs are prohibited from discriminating based on
-      race, color, national origin, sex, disability, age, or reprisal or
-      retaliation for prior civil rights activity in any program or activity
-      conducted or funded by USDA. Persons with disabilities who require
-      alternative means of communication for program information (e.g. Braille,
-      large print, audiotape, American Sign Language, etc.), should contact the
-      Agency (State or local) where they applied for benefits. Individuals who
-      are deaf, hard of hearing or have speech disabilities may contact USDA
-      through the Federal Relay Service at (800) 877-8339. Additionally, program
-      information may be made available in languages other than English. To file
-      a program complaint of discrimination, complete the USDA Program
-      Discrimination Complaint Form, (AD-3027) found online at:
-      http://www.ascr.usda.gov/complaint_filing_cust.html, and at any USDA
-      office, or write a letter addressed to USDA and provide in the letter all
-      of the information requested in the form. To request a copy of the
-      complaint form, call (866) 632-9992. Submit your completed form or letter
-      to USDA by: (1) mail: U.S. Department of Agriculture Office of the
-      Assistant Secretary for Civil Rights 1400 Independence Avenue, SW
-      Washington, D.C. 20250-9410; (2) fax: (202) 690-7442; or (3) email:
-      program.intake@usda.gov. This institution is an equal opportunity
-      provider.
-    </article>
-
+      <h3>USDA Non-Discrimination Statement</h3>
+      <article>
+        In accordance with Federal civil rights law and U.S. Department of
+        Agriculture (USDA) civil rights regulations and policies, the USDA, its
+        Agencies, offices, and employees, and institutions participating in or
+        administering USDA programs are prohibited from discriminating based on
+        race, color, national origin, sex, disability, age, or reprisal or
+        retaliation for prior civil rights activity in any program or activity
+        conducted or funded by USDA. Persons with disabilities who require
+        alternative means of communication for program information (e.g.
+        Braille, large print, audiotape, American Sign Language, etc.), should
+        contact the Agency (State or local) where they applied for benefits.
+        Individuals who are deaf, hard of hearing or have speech disabilities
+        may contact USDA through the Federal Relay Service at (800) 877-8339.
+        Additionally, program information may be made available in languages
+        other than English. To file a program complaint of discrimination,
+        complete the USDA Program Discrimination Complaint Form, (AD-3027) found
+        online at: http://www.ascr.usda.gov/complaint_filing_cust.html, and at
+        any USDA office, or write a letter addressed to USDA and provide in the
+        letter all of the information requested in the form. To request a copy
+        of the complaint form, call (866) 632-9992. Submit your completed form
+        or letter to USDA by: (1) mail: U.S. Department of Agriculture Office of
+        the Assistant Secretary for Civil Rights 1400 Independence Avenue, SW
+        Washington, D.C. 20250-9410; (2) fax: (202) 690-7442; or (3) email:
+        program.intake@usda.gov. This institution is an equal opportunity
+        provider.
+      </article>
+    </div>
     <!-- <div class="inputsection">
       <form action="pagesfolder/results.html">
         <input type="text" name="Name" placeholder="Name" />
