--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   </head>
   <body>
     <header>WIC Finder</header>
+    <div class="cellphoneheader">W</div>
     <div class="navigation" id="nav">
       <nav>
         <ul>
@@ -29,7 +30,7 @@
       </form>
     </div>
     <div class="resultindex"></div>
-    <div class="map">
+    <!-- <div class="map">
       <div>
         <iframe
           width="760px"
@@ -51,7 +52,7 @@
           >
         </p>
       </div>
-    </div>
+    </div> -->
     <script
       src="https://code.jquery.com/jquery-3.4.1.min.js"
       integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
