--- a/pagesfolder/about.html
+++ b/pagesfolder/about.html
@@ -16,6 +16,7 @@
       <nav>
         <ul>
           <li><a href="/index.html">Home</a></li>
+          <li><a href="/pagesfolder/farmers.html">Farmer's Market</a></li>
           <li><a href="/pagesfolder/about.html">About</a></li>
           <li><a href="/pagesfolder/info.html">Info</a></li>
         </ul>
