--- a/index.html
+++ b/index.html
@@ -10,11 +10,13 @@
   </head>
   <body>
     <header>WIC Finder</header>
-    <div class="cellphoneheader">W</div>
+    <div class="cellphoneheader">
+      W
+    </div>
     <div class="navigation" id="nav">
       <nav>
-        <ul>
-          <li><a href="index.html">Home</a></li>
+          <li><a href="/index.html">Home</a></li>
+          <li><a href="/pagesfolder/farmers.html">Farmer's Market</a></li>
           <li><a href="/pagesfolder/about.html">About</a></li>
           <li><a href="/pagesfolder/info.html">Info</a></li>
         </ul>
@@ -27,7 +29,11 @@
         <input type="text" class="city" placeholder="City" />
         <input type="text" class="zipcode" placeholder="Zip Code" />
         <input type="submit" value="submit" />
+        <button onclick="location.reload();">reset</button>
       </form>
+   
+          
+  
     </div>
     <div class="resultindex"></div>
     <!-- <div class="map">
