--- a/WICPROJECT/pagesfolder/farmers.html
+++ b/WICPROJECT/pagesfolder/farmers.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link rel="stylesheet" href="/cssfolder/farmers.css" />
+    <link rel="stylesheet" href="/WICPROJECT/cssfolder/farmers.css" />
     <link
       href="https://fonts.googleapis.com/css?family=Bevan|Kanit:200|Catamaran:800|Luckiest+Guy|Raleway:900&display=swap"
       rel="stylesheet"
@@ -15,10 +15,12 @@
     <div class="navigation" id="nav">
       <nav>
         <ul>
-          <li><a href="/index.html">Home</a></li>
-          <li><a href="/pagesfolder/farmers.html">Farmer's Market</a></li>
-          <li><a href="/pagesfolder/about.html">About</a></li>
-          <li><a href="/pagesfolder/info.html">Info</a></li>
+          <li><a href="/WICPROJECT/pagesfolder/home.html">Home</a></li>
+          <li>
+            <a href="/WICPROJECT/pagesfolder/farmers.html">Farmer's Market</a>
+          </li>
+          <li><a href="/WICPROJECT/pagesfolder/about.html">About</a></li>
+          <li><a href="/WICPROJECT/pagesfolder/info.html">Info</a></li>
         </ul>
       </nav>
     </div>
@@ -47,6 +49,6 @@
       integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
       crossorigin="anonymous"
     ></script>
-    <script src="/jsfolder/app2.js"></script>
+    <script src="/WICPROJECT/jsfolder/app2.js"></script>
   </body>
 </html>
