added README page and c

--- a/WICPROJECT/pagesfolder/about.html
+++ b/WICPROJECT/pagesfolder/about.html
@@ -58,6 +58,9 @@
         omnis magni eveniet, reiciendis sint tempora impedit cum beatae sequi?
       </article>
     </div>
+    <footer>
+      © 2019 WIC Finder - Steven W.
+    </footer>
     <!-- <div class="inputsection">
       <form action="pagesfolder/results.html">
         <input type="text" name="Name" placeholder="Name" />
