--- a/WICPROJECT/pagesfolder/farmers.html
+++ b/WICPROJECT/pagesfolder/farmers.html
@@ -44,6 +44,10 @@
       </form>
     </div>
     <div class="resultindex"></div>
+
+    <footer>
+      © 2019 WIC Finder - Steven W.
+    </footer>
     <script
       src="https://code.jquery.com/jquery-3.4.1.min.js"
       integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
