--- a/WICPROJECT/pagesfolder/home.html
+++ b/WICPROJECT/pagesfolder/home.html
@@ -36,6 +36,11 @@
   
     </div>
     <div class="resultindex"></div>
+
+    <footer>
+      © 2019 WIC Finder - Steven W.
+    </footer>
+
     <!-- <div class="map">
       <div>
         <iframe
