--- a/WICPROJECT/pagesfolder/info.html
+++ b/WICPROJECT/pagesfolder/info.html
@@ -76,6 +76,10 @@
         provider.
       </article>
     </div>
+
+    <footer>
+      © 2019 WIC Finder - Steven W.
+    </footer>
     <!-- <div class="inputsection">
       <form action="pagesfolder/results.html">
         <input type="text" name="Name" placeholder="Name" />
