--- a/WICPROJECT/pagesfolder/about.html
+++ b/WICPROJECT/pagesfolder/about.html
@@ -15,12 +15,12 @@
     <div class="navigation" id="nav">
       <nav>
         <ul>
-          <li><a href="/WICPROJECT/pagesfolder/home.html">Home</a></li>
+          <li><a href="/WICPROJECT/pagesfolder/home.html">HOME</a></li>
           <li>
-            <a href="/WICPROJECT/pagesfolder/farmers.html">Farmer's Market</a>
+            <a href="/WICPROJECT/pagesfolder/farmers.html">MARKET</a>
           </li>
-          <li><a href="/WICPROJECT/pagesfolder/about.html">About</a></li>
-          <li><a href="/WICPROJECT/pagesfolder/info.html">Info</a></li>
+          <li><a href="/WICPROJECT/pagesfolder/about.html">ABOUT</a></li>
+          <li><a href="/WICPROJECT/pagesfolder/info.html">INFO</a></li>
         </ul>
       </nav>
     </div>
@@ -28,38 +28,39 @@
     <div class="information">
       <h2>About this site</h2>
       <article>
-        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dicta magnam
-        ad cumque temporibus reiciendis numquam esse eveniet animi. Illo et
-        atque quasi assumenda provident adipisci nostrum repudiandae cupiditate
-        debitis sapiente. Lorem ipsum dolor sit amet consectetur adipisicing
-        elit. Consequuntur voluptas sed doloremque labore perspiciatis
-        necessitatibus iste obcaecati fugiat unde, eum repudiandae, similique
-        quam, incidunt perferendis minus ipsum blanditiis laboriosam facere.
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Doloremque,
-        dolores magni tenetur reprehenderit nemo voluptatum molestiae quia
-        eligendi a aliquid. Soluta quis temporibus quia officiis. Pariatur
-        perspiciatis molestias ea ullam?
+        WIC FINDER is an application to help people find vendors that are in
+        Connecticut's Women Infant & Children program. One simply goes to the
+        homepage and you can either type in your city or zipcode, and all the
+        vendors of either location will populate. There is also a new section
+        "Farmer's Market" where one can also locate farmer markets that are in
+        the program. Because there arent that many, the easiest way to find
+        one's local farmer's market is by counties. In the Drop Down you pick
+        your county and the markets, time and websites that are in the program
+        will populate.There are also two other pages, one is the about page,
+        which will explain what the applicatin is for, and the other one is
+        information on CT's program itself.
       </article>
       <h2>API being used</h2>
       <article>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod libero
-        molestias architecto nihil optio, dolorum unde veritatis mollitia ipsum
-        consequuntur illo accusamus sed nesciunt assumenda reiciendis, vero
-        cupiditate facere impedit! Lorem ipsum, dolor sit amet consectetur
-        adipisicing elit. Aliquam accusantium illo quae totam, dolorum vitae,
-        omnis delectus ab quod quas labore et placeat quis. Quam magni doloribus
-        exercitationem dolores in.
+        There are two API's that were used for this application. Both came from
+        CT's Data website. "https://data.ct.gov". The farmers market one is
+        "https://data.ct.gov/dataset/Farmers-Markets/qkcc-8trv" and the second
+        one is
+        "https://data.ct.gov/Health-and-Human-Services/WIC-Authorized-Vendors/jk32-cd4i"
       </article>
 
       <h3>How to contribute</h3>
       <article>
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nisi magnam
-        eum amet natus, laboriosam est a ea necessitatibus aliquam tempore,
-        omnis magni eveniet, reiciendis sint tempora impedit cum beatae sequi?
+        if you have any idead or would like to contribute on expanding this
+        site, go to the github page for this application
+        <a href="https://github.com/stetomcon/stetomcon.github.io">
+          "click here"</a
+        >
+        or <a href=mailto:stevenwolanin@gmail.com?subject="WIC FINDER IDEA">click here to e-mail me.</a>
       </article>
     </div>
     <footer>
-      © 2019 WIC Finder - Steven W.
+      © 2019 WIC FINDER - Steven W.
     </footer>
     <!-- <div class="inputsection">
       <form action="pagesfolder/results.html">
