--- a/WICPROJECT/pagesfolder/farmers.html
+++ b/WICPROJECT/pagesfolder/farmers.html
@@ -15,12 +15,12 @@
     <div class="navigation" id="nav">
       <nav>
         <ul>
-          <li><a href="/WICPROJECT/pagesfolder/home.html">Home</a></li>
+          <li><a href="/WICPROJECT/pagesfolder/home.html">HOME</a></li>
           <li>
-            <a href="/WICPROJECT/pagesfolder/farmers.html">Farmer's Market</a>
+            <a href="/WICPROJECT/pagesfolder/farmers.html">MARKET</a>
           </li>
-          <li><a href="/WICPROJECT/pagesfolder/about.html">About</a></li>
-          <li><a href="/WICPROJECT/pagesfolder/info.html">Info</a></li>
+          <li><a href="/WICPROJECT/pagesfolder/about.html">ABOUT</a></li>
+          <li><a href="/WICPROJECT/pagesfolder/info.html">INFO</a></li>
         </ul>
       </nav>
     </div>
@@ -46,7 +46,7 @@
     <div class="resultindex"></div>
 
     <footer>
-      © 2019 WIC Finder - Steven W.
+      © 2019 WIC FINDER - Steven W.
     </footer>
     <script
       src="https://code.jquery.com/jquery-3.4.1.min.js"
