--- a/WICPROJECT/pagesfolder/home.html
+++ b/WICPROJECT/pagesfolder/home.html
@@ -15,10 +15,10 @@
     </div>
     <div class="navigation" id="nav">
       <nav>
-          <li><a href="/WICPROJECT/pagesfolder/home.html">Home</a></li>
-          <li><a href="/WICPROJECT/pagesfolder/farmers.html">Farmer's Market</a></li>
-          <li><a href="/WICPROJECT/pagesfolder/about.html">About</a></li>
-          <li><a href="/WICPROJECT/pagesfolder/info.html">Info</a></li>
+          <li><a href="/WICPROJECT/pagesfolder/home.html">HOME</a></li>
+          <li><a href="/WICPROJECT/pagesfolder/farmers.html">MARKET</a></li>
+          <li><a href="/WICPROJECT/pagesfolder/about.html">ABOUT</a></li>
+          <li><a href="/WICPROJECT/pagesfolder/info.html">INFO</a></li>
         </ul>
       </nav>
     </div>
@@ -38,7 +38,7 @@
     <div class="resultindex"></div>
 
     <footer>
-      © 2019 WIC Finder - Steven W.
+      © 2019 WIC FINDER - Steven W.
     </footer>
 
     <!-- <div class="map">
