--- a/WICPROJECT/pagesfolder/about.html
+++ b/WICPROJECT/pagesfolder/about.html
@@ -51,7 +51,7 @@
 
       <h3>How to contribute</h3>
       <article>
-        if you have any idead or would like to contribute on expanding this
+        if you have any ideas or would like to contribute on expanding this
         site, go to the github page for this application
         <a href="https://github.com/stetomcon/stetomcon.github.io">
           "click here"</a
